--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -19,4 +19,7 @@ jobs:
           echo "## Confusion matrix">> report.md
           cml-publish confusion_matrix.png --md >> report.md
           
+          echo "## Features importance">> report.md
+          cml-publish feature_importance.png --md >> report.md
+          
           cml-send-comment report.md
